Update model API health response
